--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "ts-node-dev ./src/infra/http/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
+    "socket.io": "^4.5.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4"
+    "@types/express": "^4.17.14",
+    "@types/uuid": "^8.3.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
